# splatter

./: .gitignore  README.md  setup.cfg  setup.py
splatter/: __init__.py  distance_subgraph.py  generalized_star_clustering.py  swipe.py
