[metadata]
name = splatter
version = 0.0.2
url = https://github.com/i2mint/splatter
packages = 
		splatter
include_package_data = True
platforms = any
description_file = README.md
pkg-dir = .
description = Vizualizing multidimensional points in a pleasing and informative way
root_url = https://github.com/i2mint/
license = mit
description-file = README.md

[options]
zip_safe = False
packages = find:
install_requires = 
	oui